syntax = "proto3";
package anytype.storage;
option go_package = "pkg/lib/pb/storage";

import "google/protobuf/struct.proto";

message Step {
    string name = 1;
    Link link   = 2;
}

message FileKeys {
    map<string,string> keysByPath = 1;
}

message FileInfo {
    string path = 16; // for retrieving key
    string mill = 1;
    string checksum = 2;
    string source = 3;
    string opts = 4;
    string hash = 5;
    string key = 6;
    string media = 7;
    string name = 8;
    int64 size = 9; // useless for variants, used only with original file
    int64 added = 10;
    google.protobuf.Struct meta = 11; // goes straight to details, but width is used in searching for resize variant
    reserved 12;
    reserved 13;
    string metaHash = 14;
    int64 lastModifiedDate = 15;
}

message ImageResizeSchema {
    string name                        = 1;
    string mill                        = 4;
    map<string, string> opts           = 5;
    google.protobuf.Struct json_schema = 6;
    repeated Link links            = 8;
}

message Link {
    string name = 1;
    string mill                        = 4;
    map<string, string> opts           = 5;
    google.protobuf.Struct json_schema = 6;
}
